# nvm

./: Assembler.cpp  Assembler.h  CMakeLists.txt  NVMBinaryFormat.h  NVMData.h  NVMInterruptTable.h  NVMVirtualMachine.cpp  NVMVirtualMachine.h  Util.h  main.cpp
sample_assembly/: factorial.asm  print_string.asm
